feat(api,doc): implement README file for documentation
